# gsd

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: gsd.ipynb  notebook_template.ipynb
gsd/: __init__.py  gsdIO.py  project.py  timer.py
scripts/: predict.py  train.py
src/: gtd_fileops.py  gtd_project.py  gtd_timer.py  gtd_utils.py
