[metadata]
name = gsd
version = 0.1.0.post1
description = A Python package to help Get Sh*t Done.
long_description = file: README.md
long_description_content_type = text/markdown
author = Essan Soobratty
author_email = essans@me.com
url = https://github.com/essans
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.12
install_requires =
    pyYAML==6.0.2,
    setuptools>=65.5.0
    pandas>=2.2.3
    boto3>=1.35.93
    numpy>=1.26.4
    s3fs>=2024.12.0
    requests>=2.32.3
    PyJWT>=2.10.1


